traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:5: error: not found: value estfaceMur
    if (!estfaceMur) {
         ^Snake:24: error: not found: value estfaceMur
      if (estfaceMur()) {
          ^Snake:30: error: not found: value estfaceMur
      if (estfaceMur()) {
          ^